# maxwell

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.bat  dllmain.cpp  hook.cpp  hook.h  injector.cpp  logging.h  main.cpp  max.cpp  max.h  memory.cpp  search.cpp  search.h  settings.cpp  stb.h  ui.cpp  ui.h  version.cpp
.github/workflows/: build.yml
dll/: dllmain.cpp  hook.cpp  image.cpp  image.h  max.cpp  memory.h  search.cpp  search.h  settings.cpp  settings.h  ui.cpp  ui.h  virtual_table.cpp  virtual_table.h
res/: MAXWELL.rc
shared/: logger.h
